--- a/style/style.css
+++ b/style/style.css
@@ -22,7 +22,6 @@ div {
 }
 
 .titleimg {
-	flex-wrap: wrap;
 	padding-top: 130px;
 	margin: auto;
 	width: 90%;
